Multi-value editing does not work well with layers. #44697

Closed
opened 2015-05-13 16:09:37 +02:00 by ronan ducluzeau · 6 comments

System Information
Ubuntu 14.04 Nvidia Titan Black

Blender Version
Broken: 2.74.5 1a0fb7e
Worked: (optional)

Short description of error
When changing active object to another layer presing alt key, objects of selection are still staying in their previous layer.
Selection is at same time on same layer than active object, on their previous layer and all layers that have been activated during alt left click.
For selection, layers are just enabled . Alt lmb or shift alt lmb have same action for selection except for active object.

Maybe it is seen as a plus. We can use M shortcut to move objects or bones to a different visibility layer.

But for collision layers of rigid bodies, it is an unwanted behaviour.

Exact steps for others to reproduce the error
MVE_collision_layers.blend
In this file, start an alt lmb on first collision layer, move mouse cursor to fifth layer before releasing alt lmb.
Check collision layers for Cube.001.

**System Information** Ubuntu 14.04 Nvidia Titan Black **Blender Version** Broken: 2.74.5 1a0fb7e Worked: (optional) **Short description of error** When changing active object to another layer presing alt key, objects of selection are still staying in their previous layer. Selection is at same time on same layer than active object, on their previous layer and all layers that have been activated during alt left click. For selection, layers are just enabled . Alt lmb or shift alt lmb have same action for selection except for active object. Maybe it is seen as a plus. We can use M shortcut to move objects or bones to a different visibility layer. But for collision layers of rigid bodies, it is an unwanted behaviour. **Exact steps for others to reproduce the error** [MVE_collision_layers.blend](https://archive.blender.org/developer/F174034/MVE_collision_layers.blend) In this file, start an alt lmb on first collision layer, move mouse cursor to fifth layer before releasing alt lmb. Check collision layers for Cube.001.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The problem here is that layer buttons are not simply using RNA (the data API), they have a custom callback which changes their behavior. ui_layer_but_cb, and custom behavior like this isn't automatically copied to others.

Will leave open, it would be great to solve this before release if some good way can be found.

The problem here is that layer buttons are not simply using RNA (the data API), they have a custom callback which changes their behavior. `ui_layer_but_cb`, and custom behavior like this isn't automatically copied to others. Will leave open, it would be great to solve this before release if some good way can be found.
Campbell Barton was assigned by Bastien Montagne 2015-05-15 11:28:41 +02:00

This issue was referenced by abf7378e44

This issue was referenced by abf7378e4445ba10828e369edf399ba4c29995c1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44697
No description provided.