Fix T44697: Multi-value edit /w layers fails

Not such a nice solution, but good to have this working.